@@ -205,9 +205,13 @@ class Revelation(ui.App):
 		self.hpaned = ui.HPaned(self.scrolledwindow, alignment)
 		self.set_contents(self.hpaned)
 
-		# set up drag-and-drop of files
+		# set up drag-and-drop
 		self.drag_dest_set(gtk.DEST_DEFAULT_ALL, ( ( "text/uri-list", 0, 0 ), ), gtk.gdk.ACTION_COPY | gtk.gdk.ACTION_MOVE | gtk.gdk.ACTION_LINK )
 		self.connect("drag_data_received", self.__cb_drag_dest)
+
+		self.tree.enable_model_drag_source(gtk.gdk.BUTTON1_MASK, ( ( "revelation/treerow", gtk.TARGET_SAME_APP | gtk.TARGET_SAME_WIDGET, 0), ), gtk.gdk.ACTION_MOVE)
+		self.tree.enable_model_drag_dest(( ( "revelation/treerow", gtk.TARGET_SAME_APP | gtk.TARGET_SAME_WIDGET, 0), ), gtk.gdk.ACTION_MOVE)
+		self.tree.connect("drag_data_received", self.__cb_tree_drag_received)
 
 		# set up callbacks
 		self.searchbar.button.connect("clicked", lambda w: self.__entry_find(self, self.searchbar.entry.get_text(), None))
@@ -334,6 +338,48 @@ class Revelation(ui.App):
 			sys.exit(1)
 
 
+	def __cb_tree_drag_received(self, tree, context, x, y, seldata, info, time):
+		"Callback for drag drops on the treeview"
+
+		# get source and destination data
+		sourceiters = self.entrystore.filter_parents(self.tree.get_selected())
+		destrow = self.tree.get_dest_row_at_pos(x, y)
+
+		if destrow is None:
+			destpath = ( self.entrystore.iter_n_children(None) - 1, )
+			pos = gtk.TREE_VIEW_DROP_AFTER
+
+		else:
+			destpath, pos = destrow
+
+		destiter = self.entrystore.get_iter(destpath)
+
+		# avoid drop to descendants
+		for sourceiter in sourceiters:
+			if self.entrystore.is_ancestor(sourceiter, destiter) == True or self.entrystore.get_path(sourceiter) == self.entrystore.get_path(destiter):
+				context.finish(False, False, time)
+				return
+
+		# move the entries
+		if pos in ( gtk.TREE_VIEW_DROP_INTO_OR_BEFORE, gtk.TREE_VIEW_DROP_INTO_OR_AFTER):
+			parent = destiter
+			sibling = None
+
+		elif pos == gtk.TREE_VIEW_DROP_BEFORE:
+			parent = self.entrystore.iter_parent(destiter)
+			sibling = destiter
+
+		elif pos == gtk.TREE_VIEW_DROP_AFTER:
+			parent = self.entrystore.iter_parent(destiter)
+
+			sibpath = list(destpath)
+			sibpath[-1] += 1
+			sibling = self.entrystore.get_iter(sibpath)
+
+		self.entry_move(sourceiters, parent, sibling)
+		context.finish(True, True, time)
+
+
 	def __cb_tree_keypress(self, widget, data = None):
 		"Handles key presses for the tree"
 
@@ -394,6 +440,31 @@ class Revelation(ui.App):
 		self.entrystore.import_entry(entrystore, None)
 
 
+	def __cb_redo_move(self, name, actiondata):
+		"Redoes a move action"
+
+		newiters = []
+
+		for prepath, postpath in actiondata:
+			prepath, postpath = list(prepath), list(postpath)
+
+			# adjust path if necessary
+			if postpath[:len(prepath) - 1] == prepath[:-1]:
+				if prepath[-1] <= postpath[len(prepath) - 1]:
+					postpath[len(prepath) - 1] += 1
+
+			newiter = self.entrystore.move_entry(
+				self.entrystore.get_iter(prepath),
+				self.entrystore.get_iter(postpath[:-1]),
+				self.entrystore.get_iter(postpath)
+			)
+
+			newiters.append(newiter)
+
+		if len(newiters) > 0:
+			self.tree.select(newiters[0])
+
+
 	def __cb_redo_paste(self, name, actiondata):
 		"Redoes a paste action"
 
@@ -446,6 +517,31 @@ class Revelation(ui.App):
 			self.entrystore.remove_entry(iter)
 
 		self.tree.unselect_all()
+
+
+	def __cb_undo_move(self, name, actiondata):
+		"Undoes a move action"
+
+		newiters = []
+
+		for prepath, postpath in actiondata:
+			prepath, postpath = list(prepath), list(postpath)
+
+			# adjust path if necessary
+			if postpath[:-1] == prepath[:-1]:
+				if prepath[-1] > postpath[len(prepath) - 1]:
+					prepath[-1] += 1
+
+			newiter = self.entrystore.move_entry(
+				self.entrystore.get_iter(postpath),
+				self.entrystore.get_iter(prepath[:-1]),
+				self.entrystore.get_iter(prepath)
+			)
+
+			newiters.append(newiter)
+
+		if len(newiters) > 0:
+			self.tree.select(newiters[0])
 
 
 	def __cb_undo_paste(self, name, actiondata):
@@ -758,7 +854,39 @@ class Revelation(ui.App):
 
 			except util.SubstValueError:
 				revelation.dialog.Error(self, "Missing entry data", "The entry '" + e.name + "' does not have all the data required to launch it.").run()
-				
+
+
+	def entry_move(self, sourceiters, parent = None, sibling = None):
+		"Moves a set of entries"
+
+		if type(sourceiters) != list:
+			sourceiters = [ sourceiters ]
+
+		# TODO: fix support for dragging multiple entries
+		if len(sourceiters) > 0:
+			sourceiters = [ sourceiters[0] ]
+
+		newiters = []
+		undoactions = []
+
+		for sourceiter in sourceiters:
+			sourcepath = self.entrystore.get_path(sourceiter)
+			newiter = self.entrystore.move_entry(sourceiter, parent, sibling)
+			newpath = self.entrystore.get_path(newiter)
+
+			undoactions.append( ( sourcepath, newpath ) )
+			newiters.append(newiter)
+			sibling = newiter
+
+		self.undoqueue.add_action(
+			"Move entry", self.__cb_undo_move, self.__cb_redo_move,
+			undoactions
+		)
+
+		if len(newiters) > 0:
+			self.tree.select(newiters[0])
+
+		self.statusbar.set_status("Entries moved")
 
 
 	def entry_remove(self):
