@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.0 ]---------------
 
+2004-12-13  Erik Grinaker <erikg@codepoet.no>
+
+	* added support for drag and drop of entries in tree
+
+
 2004-12-10  Erik Grinaker <erikg@codepoet.no>
 
 	* rewrote the application code, as well as the dialog and u
